[package]
name = "yamusdown"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
ctr = "0.9.2"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
